# django-rest-sqlite-template

./: .editorconfig  LICENSE  README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .flake8  .gitignore  README.md  codecov.yml  docker-compose.yml  mypy.ini  pyproject.toml
{{ cookiecutter.repo_name }}/templates/apps/: README.md  admin.py-tpl  apps.py-tpl  factories.py-tpl  models.py-tpl  serializers.py-tpl  tests.py-tpl  urls.py-tpl  views.py-tpl
{{ cookiecutter.repo_name }}/tests/: settings.py
{{ cookiecutter.repo_name }}/tests/fixtures/: data.txt
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name }}/: asgi.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name }}/utils/: models.py
