[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.0.0"
description = "{{ cookiecutter.project_description }}"
authors = ["Anthony Almarza <anthony.almarza@gmail.com>"]
license = "MIT"
readme = "README.md"

# https://pypi.org/classifiers/
classifiers = [
    "Private :: Not For Public Release"
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0"
djangorestframework = "^3.11"
django-filter = "^2.2.0"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^6"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.812"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.4.0"
pytest-responses = "^0.4.0"
pytest-picked = "^0.4.4"
pytest-instafail = "^0.4.2"
freezegun = "^1.0.0"
factory-boy = "^3.1.0"
codecov = "^2.1.11"
coverage = {extras = ["toml"], version = "^5.3"}
ipython = "^7.19.0"
pre-commit = "^2.9.3"
django-coverage-plugin = "^1.8.0"
pytest-django = "^4.1.0"
python-dotenv = "^0.15.0"
django-debug-toolbar = "^3.2"
django-extensions = "^3.1.0"
django-test-migrations = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = [
    "{{ cookiecutter.project_name }}",
]
omit = [
    "tests/*",
    "factories/*"
]

[tool.coverage.report]
omit = [
    "tests/*",
    "factories/*",
    "{{ cookiecutter.project_name }}/manage.py",
    "{{ cookiecutter.project_name }}/wsgi.py",
    "{{ cookiecutter.project_name }}/asgi.py",
]
skip_empty = true
show_missing = true
fail_under = 100

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | templates
  )/
)
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = "-s"
python_files = [
    "test_*.py",
    "tests.py",
    "*_tests.py"
]
testpaths = [
    "./tests",
    "./{{ cookiecutter.project_name }}"
]
